fix bugs in product-api and sales-api